# continually-adapting-nns

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  compile.sh  count_configs.cpp  experiment_atari.cpp  experiment_decorrelator_generate_n_test.cpp  experiment_prune_binary_mnist.cpp  experiment_synthetic.cpp  experiment_synthetic_nonstationary.cpp  requirements.txt  setup.sh
.github/workflows/: cmake.yml  cpplint.yml
cfg/: 03xx_n2_decor  03xx_no_decor  03xx_random_decor  0810_mnist_binary_pretraining_sweep  0811_mnist_binary_pretraining_best  0824_binary_mnist_delayed1  0824_binary_mnist_delayed2  0824_binary_mnist_delayed3  1000_0_vs_n2_changing_weights  1001_0_vs_n2_changing_weights_more_seeds  1002_0_vs_n2_changing_weights_nognt  1003_0_vs_n2_changing_weights_nognt_longer  1004_atari.json  1005_test_mongo.json  1006_0_vs_n2_cleanup_test.json  1007_0_vs_n2_fix_gradient_bug.json  1008_0_vs_n2_changeto_w_mag.json  1009_0_vs_n2_changeto_w_mag.json  1010_0_vs_n2_nonstationary.json  1012_0_vs_n2_nonstationary_100x.json  1013_0_vs_n2_nonstationary_100x_random.json
include/: stdout.h
include/environments/: atari_prediction_environment.h
include/evaluators/: predictionEvaluator.h
include/experiment/: Experiment.h
include/logger/: logger.h
include/nn/: dynamic_elem.h  message.h  synced_neuron.h  synced_synapse.h  utils.h
include/nn/networks/: pretrained_dense_network.h  single_layer_network.h  synced_network.h
model_pretrainers/: train.py  train_binary_mnist.py  train_binary_mnist_linear.py
notebooks/: 0010_binary_mnist_dropout_init_0.ipynb  0011_binary_mnist_dropout_relative.ipynb  0012_binary_mnist_dropout_vary_fwd.ipynb
results/: 0013_binary_mnist_delayed.ipynb  1000_0_vs_n2_changing_weights.ipynb  1002_0_vs_n2_changing_weight_nognt.ipynb  1003_0_vs_n2_changing_weight_nognt_longer.ipynb  1007_0_vs_n2_fix_gradients_in_update.ipynb  1008_weight_magnitude.ipynb  100x_mongo_plotter.ipynb
results/decorrelation/: 0001_10x_learner.ipynb  0002_full_learner.ipynb  0006_n2_decorrelator_single_tester_adjusted_corr_updated.ipynb  0008_gnt_vs_nognt_sweep.ipynb  0009_n2_fixed_w.ipynb  0015_fixed_metrics.ipynb  0016_all_sweep.ipynb  0018_all_after_sweep.ipynb  0019_all_sweeped_with_random_thresh.ipynb  0020_vary_learner.ipynb  0021_halfway_decor.ipynb  0022_vary_learner_longer.ipynb  0023_new_setting.ipynb  0024_new_setting_longer_replacement.ipynb  0025_new_setting_20perc_rep.ipynb  0026_fix_maturity.ipynb  0027_compare_all.ipynb  0028_v4.ipynb  0029_v4_retry.ipynb  0032_f50_comp.ipynb  0033_fix_max_bias.ipynb  0035_regulailzer_sweep.ipynb  0036_f25_all.ipynb  0037_scalability_exps.ipynb  0038_all_sweep.ipynb  0039_f25_best_ss_all.ipynb  0040_f25_best_ss_longer.ipynb  0041_f25_presentation-Copy1.ipynb  0041_f25_presentation.ipynb  0042_f50_presentation.ipynb  0043_regularizer_sweep_finer.ipynb
src/: CMakeLists.txt  utils.cpp
src/atari/: CMakeLists.txt  atari_prediction_environment.cpp
src/atari/games/supported/: Pong.cpp
src/evaluators/: predictionEvaluator.cpp
src/experiment/: Database.cpp  Experiment.cpp  Metric.cpp
src/logger/: logger.cpp
src/nn/: CMakeLists.txt  dynamic_elem.cpp  message.cpp  synced_neuron.cpp  synced_synapse.cpp  utils.cpp
src/nn/networks/: pretrained_dense_network.cpp  single_layer_network.cpp  small_network.cpp  synced_network.cpp
tests/: cpp_mnist_prediction.cpp  linear_model_test.cpp  mnist_resize_check.py  torch_mnist_prediction.py
